cmake_minimum_required(VERSION 3.26)
project(ICT1018_Data_Structures C)

set(CMAKE_C_STANDARD 11)

add_executable(Q1Q2 q1q2.c)
add_executable(Q3 q3.c)
add_executable(Q4 q4.c)
add_executable(Q5 q5.c)
add_executable(Q6 q6.c)
add_executable(Q7 q7.c)
add_executable(Q8 q8.c)
add_executable(Q9 q9.c)
add_executable(Q10 q10.c)
add_executable(Q11 q11.c)
add_executable(Q12 q12.c)

